create login and register functions, schemaand route with jwt
