# models/user.js
@@ -1,0 +1,27 @@
+import mongoose from "mongoose";
+
+const userSchema = new mongoose.Schema({
+    name:{
+        type: String,
+        require: true
+    },
+    email:{
+        type: String,
+        require: true,
+        unique: true
+    },
+    password:{
+        type: String,
+        require: true
+    },
+    role: {
+        type: String,
+        default: 'customer'
+    },
+    refreshToken: {
+        type: [String],
+        default: []
+    }
+})
+
+export const User = mongoose.model("User", userSchema)
